# dotsamastake.io

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  Dockerfile  HELP.md  index.html  nginx.conf  notes.txt  package-lock.json  package.json  pom.xml
backend/: pom.xml
backend/src/main/: pom.xml
backend/src/main/java/: DotsamastakeApplication.java  TestController.java  TomcatController.java
backend/src/main/resources/: application.properties  data.sql  schema.sql
dotsamastake/: index.html  package-lock.json  package.json
dotsamastake/server/src/: email.rs
dotsamastake/src/: App.svelte  main.js
dotsamastake/src/components/: About.svelte  App.svelte  Contact.svelte  Footer.svelte  Header.svelte  Home.svelte
frontend/: README.md  angular.json  karma.conf.js  package-lock.json  package.json  pom.xml
frontend/dotsamastake/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
frontend/dotsamastake/src/: index.html  index2.html  styles.css
frontend/dotsamastake/src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
frontend/src/: index.html
frontend/src/app/: app-routing.module.ts  app.component.spec.ts  app.component.ts  app.module.ts
frontend/src/app/homepage/: homepage.component.html  homepage.component.ts
frontend/src/app/user-form/: user-form.component.ts
frontend/src/app/user-list/: user-list.component.ts
server/: Cargo.toml  Dockerfile  server-actix.service
server/src/: email.rs  main.rs
src/components/: About.svelte  Contact.svelte  Home.svelte
(+14 files in other folders)
